--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,8 +1,23 @@
 
-</body>
-
+<!--Ionicons-->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<!--Google Fonts-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+</head>
+<body>
 <footer>
-    &#169; Made with ❤ by <a href="https://abhinavkashyap061.github.io/" target="_blank">Abhinav Kashyap</a> | 2022
+    <ul class="icons">
+        <li><a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
+        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+    </ul>
+    
+        <div class="footer-copyright">
+            <p>Copyright @ 2022 All Rights Reserved.</p>
+        </div>
 </footer>
-
+</body>
 </html>
