--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,158 +1,182 @@
+@import url("https://fonts.googleapis.com/css2?family=Krona+One&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+
+:root {
+  --Krona: "Krona", sans-serif;
+  --open-sans: "Open Sans", sans-serif;
+}
 
 html {
-  background-color: #0B0C10;
+  background-color: #0b0c10;
 }
 
 h1 {
-  color: #45A29E;
+  color: #45a29e;
   padding: 10px;
-  font-family: 'Krona One', sans-serif;
+  font-family: "Open-sans", sans-serif;
 }
 
 .box {
   max-width: 400px;
   margin: 50px auto;
-  background: #1F2833;
+  background: #1f2833;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
 #heading {
-  background-color: #1F2833;
+  background-color: #1f2833;
   text-align: center;
 }
 
 .item {
-  min-height: 70px;
+  min-height: 50px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #F1F1F1;
+  border-bottom: 1px solid #f1f1f1;
 }
 
 .item:last-child {
   border-bottom: 0;
 }
 
-input:checked+p {
+input:checked + p {
   text-decoration: line-through;
-  text-decoration-color: #45A29E;
+  text-decoration-color: #45a29e;
 }
 
-input[type="checkbox"] {
+
+input[type="checkbox"]  {
+  appearance: none;
+  /* background-color: #0b0c10; */
+  background-image: url("../images/trash-can-10417.png");
+  margin: 0;
+  font: inherit;
+  width: 1.15em;
+  height: 1.15em;
+  transform: translateY(-0.075em);
   margin: 20px;
 }
+
+input[type="checkbox"]:hover {
+cursor: pointer 
+;}
 
 p {
   margin: 0;
   padding: 20px;
   font-size: 20px;
   font-weight: 200;
-  color: #66FCF1;
-  font-family: 'Krona One', sans-serif;
+  color: #66fcf1;
+  font-family: "Open-sans", sans-serif;
 }
 
 form.item {
   text-align: center;
   margin-left: 20px;
+  margin-right: 20px;
 }
 
 button {
-  min-height: 50px;
+  height: 50px;
   width: 50px;
-  border-radius: 50%;
+  border-radius: 10px;
   border-color: transparent;
-  background-color: #66FCF1;
-  color: #45A29E;
+  background-color: #66fcf1;
+  color: #45a29e;
   font-size: 30px;
-  padding-bottom: 6px;
   border-width: 0;
+  margin-bottom: 20px;
+}
+
+button:hover {
+cursor: pointer;
 }
 
 input[type="text"] {
   text-align: center;
   height: 60px;
   top: 10px;
+  border-radius: 10px;
   border: none;
-  background: transparent;
+  background: #0b0c10;
   font-size: 20px;
   font-weight: 200;
   width: 313px;
-  color: #66FCF1;
-  font-family: 'Krona One', sans-serif;
+  color: #66fcf1;
+  font-family: "Open-sans", sans-serif;
+  margin-bottom: 20px;
 }
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #66FCF1;
+  box-shadow: inset 0 -3px 0 0 #66fcf1;
 }
 
 ::placeholder {
-  color: #45A29E;
+  color: #45a29e;
   opacity: 1;
-  font-family: 'Krona One', sans-serif;
+  font-family: "Open-sans", sans-serif;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-html{
-    height: 100%;
+html {
+  height: 100%;
 }
 
-body{
-	font-family: 'Open Sans', sans-serif;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
+body {
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-footer{
-    background-color:#0a0b10;
-    text-align: center;
-    text-transform: uppercase;
-    padding-top: 30px;
-    margin-top: auto;
+footer {
+  background-color: #0a0b10;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 30px;
+  margin-top: auto;
 }
 
-footer li{
-    list-style: none;
-    margin: 10px;
-    display: inline-block;
+footer li {
+  list-style: none;
+  margin: 10px;
+  display: inline-block;
 }
 
-.icons a{
-    background: black;
-    color: #272727;
-    padding: 14px;
-    font-size: 20px;
-    border-radius: 100%;
-    display: flex;
+.icons a {
+  background: black;
+  color: #272727;
+  padding: 14px;
+  font-size: 20px;
+  border-radius: 100%;
+  display: flex;
 }
-.icons a:hover{
-    color: #ffffff;
-    transition: 0.5s;
-}
-
-
-
-.footer-copyright{
-    background-color:black;
-    color: #ffffff;
-    padding: 15px;
-    margin-top: 30px;
-    text-transform: capitalize;
+.icons a:hover {
+  color: #ffffff;
+  transition: 0.5s;
 }
 
-.footer-copyright p{
-    margin-bottom: 0px;
+.footer-copyright {
+  background-color: black;
+  color: #ffffff;
+  padding: 15px;
+  margin-top: 30px;
+  text-transform: capitalize;
+}
+
+.footer-copyright p {
+  margin-bottom: 0px;
 }
