feat: allow customers to click also in the text not only in the checkbox

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -18,8 +18,10 @@
                     <input type="hidden" name="listName" value="<%= listTitle %>">
 
                     <!-- sends out the POST request to delete the item  -->
-                    <input type="checkbox" name="checkbox" onChange="this.form.submit();" value="<%= i._id %>">
-                    <p><%= i.name %></p>
+                    <label>
+                        <input type="checkbox" name="checkbox" onChange="this.form.submit();" value="<%= i._id %>">
+                        <p><%= i.name %></p>
+                    </label>
                     
                 </div>
             </form>
