--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -72,6 +72,11 @@ p {
   font-family: "Open-sans", sans-serif;
 }
 
+.item label {
+  display: flex;
+  align-items: center;
+}
+
 form.item {
   text-align: center;
   margin-left: 20px;
