--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,7 +84,7 @@ form.item {
 }
 
 button {
-  height: 50px;
+  height: 60px;
   width: 50px;
   border-radius: 10px;
   border-color: transparent;
@@ -93,10 +93,13 @@ button {
   font-size: 30px;
   border-width: 0;
   margin-bottom: 20px;
+  margin-left: 8px;
+  transition: all 0.5s ease;
 }
 
 button:hover {
-cursor: pointer;
+  background: #cbfffd;
+  cursor: pointer;
 }
 
 input[type="text"] {
