--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,10 +9,10 @@
 <body>
 <footer>
     <ul class="icons">
-        <li><a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+        <li><a href="https://twitter.com/abhinavkashyyap"><ion-icon name="logo-twitter"></ion-icon></a></li>
+        <li><a href="https://www.linkedin.com/in/abhinavkashyap061/"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+        <li><a href="https://github.com/abhinavkashyap061"><ion-icon name="logo-github"></ion-icon></a></li>
+        <li><a href="mailto:abhinavkashyap061@gmail.com"><ion-icon name="logo-google"></ion-icon></a></li>
     </ul>
     
         <div class="footer-copyright">
