--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,7 +3,7 @@
 
     <div class="box" id="heading">
 
-        <h1> <%= listTitle  %>  </h1>
+        <h1 id="time"> </h1>
 
     </div>
 
@@ -32,7 +32,35 @@
             <input type="text" name="toDo" placeholder="New Item">
             <button type="submit" name="list" value=<%= listTitle %> >+</button>
         </form>
-        
+      <script>
+        function startTime() {
+            const date = new Date();
+            const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+            const days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+
+            let h = date.getHours();
+            let m = date.getMinutes();
+            let s = date.getSeconds();
+            let session = "AM";
+            m = checkTime(m);
+            s = checkTime(s);
+            if (h == 0) {
+                h = 12;
+            }
+
+            if (h > 12) {
+                h = h - 12;
+                session = "PM";
+            }
+            document.getElementById('time').innerHTML = date.getDate() + " " + months[date.getMonth()] + " , " + days[date.getDay()] + "  " + h + ":" + m + ":" + s + " " + session;
+            setTimeout(startTime, 1000);
+        }
+
+        function checkTime(i) {
+            if (i < 10) { i = "0" + i };  // add zero in front of numbers < 10
+            return i;
+        }
+    </script>  
     </div>
 
 <%- include("footer"); %> 
