Add navbar with relevant app links

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,5 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <nav class="navbar navbar-default">
+        <div class="container">
+          <p class="navbar-brand">TO DO LIST</p>
+          <ul class="nav navbar-nav navbar-right">
+            <li id="home"><a href="/" class="nav-links">HOME</a></li>
+            <li id="about"><a href="/about" class="nav-links">ABOUT US</a></li>
+            <li id="contact">
+              <a href="/contact" class="nav-links">CONTACT US</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 </head>
 <body onload="startTime()">
