--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,31 @@ html {
   --Verdana: "Verdana", sans-serif;
   --open-sans: "Open Sans", sans-serif;
 }
+
+.navbar {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 0;
+  border-radius: 0;
+  margin-bottom: 0;
+  font-size: 12px;
+  letter-spacing: 5px;
+  background-color: #1f2833;
+}
+
+.navbar-nav  li a:hover {
+  color: #1abc9c !important;
+}
+
+nav ul a, nav p {
+  color: #C5C6C7 !important;
+}
+
+.navbar-brand, .nav-links{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   display: flex;
@@ -180,4 +205,85 @@ footer li {
 .footer-copyright p {
   margin-bottom: 20px;
   font-size: 15px;
+}
+
+/*
+==========
+NAVBAR
+========== 
+*/
+
+@media screen and (max-width:750px) {
+  #home{
+      margin-top: 6rem;
+  }
+  .nav-links{
+      text-align:left;
+      margin-left: 2rem;
+  }
+}
+
+.nav-links{
+  position: relative;
+}
+
+.nav-links::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  /* background-color: #1abc9c; */
+  background-color: #0CBABA;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.nav-links:hover::after{
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.nav-links:hover{
+  zoom: 105%;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.navbar-brand:hover{
+  zoom: 110%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+
+.navbar-brand
+{
+  text-transform: uppercase;
+  background-image: linear-gradient(
+  -225deg,
+  /* #18ea37 0%, */
+  #380036 0%,
+  /* #2cb5a9 29%, */
+  /* #398a21 67%, */
+  /* #128cbc 100% */
+  #0CBABA 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
